@@ -51,6 +51,9 @@
                     <mainClass>com.aau.p3.Main</mainClass>
                     <options>
                         --enable-native-access=javafx.graphics
+                        --enable-native-access=javafx.web
+                        --enable-native-access=ALL-UNNAMED
+                        -Djava.util.logging.config.file=src/main/resources/logging.properties
                     </options>
                 </configuration>
             </plugin>
@@ -58,9 +61,10 @@
             <groupId>org.apache.maven.plugins
             </groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
             <configuration>
-              <source>16</source>
-              <target>16</target>
+              <source>24</source>
+              <target>24</target>
             </configuration>
           </plugin>
         </plugins>
@@ -73,8 +77,27 @@
             <url>https://repo.osgeo.org/repository/release/</url>
         </repository>
     </repositories>
-
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.2.1-jre</version> <!-- or latest -->
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.16.1</version> <!-- or the latest available -->
+        </dependency>
+        <dependency>
+            <groupId>io.airlift</groupId>
+            <artifactId>aircompressor</artifactId>
+            <version>0.27</version>
+        </dependency>
         <!-- ✅ GeoTools -->
         <dependency>
             <groupId>org.geotools</groupId>
@@ -156,17 +179,22 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>21.0.3</version>
+            <version>25.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>21.0.3</version>
+            <version>25.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>21.0.3</version>
+            <version>25.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.51.0.0</version>
         </dependency>
     </dependencies>
 </project>
